# gitmeup

./: README.md  pyproject.toml
gitmeup/: cli.py
gitmeup.egg-info/: PKG-INFO  SOURCES.txt
